[gd_scene load_steps=5 format=2]

[ext_resource path="res://ghost.gd" type="Script" id=1]
[ext_resource path="res://Slow Run3.tscn" type="PackedScene" id=2]

[sub_resource type="BoxShape" id=1]

[sub_resource type="BoxShape" id=5]

[node name="KinematicBody" type="KinematicBody"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0.0815286, 0 )
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.260913, 0, 0, 0, -4.07101e-08, -0.931339, 0, 0.345324, -1.50946e-08, 0, 0.927175, 0 )
shape = SubResource( 1 )

[node name="Areaddd" type="Area" parent="."]
transform = Transform( 0.652918, 0, 0, 0, 0.561454, 0, 0, 0, 0.768984, 0, 0.995386, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Areaddd"]
transform = Transform( 1.15705, 0, 0, 0, 2.00845, 0, 0, 0, 0.835352, 0, 5.83914e-08, 0 )
shape = SubResource( 5 )

[node name="Slow Run2" parent="." instance=ExtResource( 2 )]

[connection signal="body_entered" from="Areaddd" to="." method="_on_Areaddd_body_entered"]

[editable path="Slow Run2"]
